--- a/config/crd/bases/opentelemetry.io_instrumentations.yaml
+++ b/config/crd/bases/opentelemetry.io_instrumentations.yaml
@@ -368,6 +368,25 @@ spec:
                     pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
                     x-kubernetes-int-or-string: true
                 type: object
+              autoInjection:
+                properties:
+                  enabled:
+                    type: boolean
+                  targetServices:
+                    items:
+                      properties:
+                        namespace:
+                          type: string
+                        services:
+                          items:
+                            type: string
+                          type: array
+                      required:
+                      - namespace
+                      - services
+                      type: object
+                    type: array
+                type: object
               defaults:
                 properties:
                   useLabelsForResourceAttributes:
